ca-prod/charts/security/policy-reporter-route/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-reporter-oauth-svc
  namespace: kyverno
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4180
  selector:
    app: policy-reporter-oauth-proxy
  type: ClusterIP
